--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
       }(window.location))
     </script>
-    <title>Youtube Play Brasil</title>
+    <title>Youtube Play </title>
   </head>
   <body style="background-color: #000000">
     <div id="root"></div>
